--- a/boldstatements_django/boldstatements/templates/boldstatements/base.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/base.html
@@ -4,7 +4,7 @@
    <head>
       <meta charset="utf-8">
       <title>Bold Statements</title>
-      <link rel="stylesheet" href="{% static 'css/style.css'}">
+      <link rel="stylesheet" href="{% static 'css/style.css' %}">
    </head>
    <body>
       <h1>Bold Statements</h1>
