--- a/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
@@ -1,7 +1,7 @@
 {% extends 'boldstatements/base.html' %}
 
 {% block content %}
-<h2>Statements <a href="">(+)</a></h2>
+<h2>Statements <a href="{% url 'make_a_statement' %}">+</a></h2>
 <ul>
     {% for statement in statements %}
         <li>
