--- a/boldstatements_django/boldstatements/static/css/semantic.css
+++ b/boldstatements_django/boldstatements/static/css/semantic.css
@@ -6842,12 +6842,12 @@ i.flag.zimbabwe:before {
 
 .ui.header {
   border: none;
-  margin: calc(2rem -  0.14285714em ) 0em 1rem;
+  /* margin: calc(2rem -  0.14285714em ) 0em 1rem; */
   padding: 0em 0em;
   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
   font-weight: bold;
   line-height: 1.28571429em;
-  text-transform: none;
+  /* text-transform: none; */
   /* color: rgba(0, 0, 0, 0.87); */
 }
 
