--- a/boldstatements_django/boldstatements/templates/boldstatements/base.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/base.html
@@ -11,14 +11,17 @@
    src="https://code.jquery.com/jquery-3.1.1.min.js"
    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
    crossorigin="anonymous" defer></script>
+   <script src="{% static 'scripts/app.js' %}" defer></script>
    <script src="semantic/dist/semantic.min.js" defer></script>
 </head>
 <body>
    <header>
-      <h1 class="ui huge header"><span class="">B</span>old <span class="">S</span>tatements</h1>
+      <h1 class="ui huge header"><span class="bs-header">B</span>old <span class="bs-header">S</span>tatements</h1>
       <nav>
          <a href="{% url 'statement_feed' %}">Statement Feed</a>
+         <a href="{% url 'make_a_statement' %}">New Statement</a>
          <a href="#">Statistics</a>
+         <a href="#">Profile</a>
       </nav>
    </header>
    {% block content %}
