--- a/boldstatements_django/boldstatements/static/css/style.css
+++ b/boldstatements_django/boldstatements/static/css/style.css
@@ -1,12 +1,13 @@
 body {
    box-sizing: border-box;
+   background-color: #BDD5E1;
    /* margin-right: 1em;
    margin-left: 1em; */
 }
 
 header {
    padding-top: 1em;
-   font-size: 2em;
+   font-size: 1.7em;
    background-color: #6EA4BF;
 }
 
@@ -17,8 +18,19 @@ h1 {
    text-transform: uppercase;
 }
 
+.header-row {
+   display: block;
+}
+
+.header-row:nth-of-type(2) {
+   margin-left: 35px;
+}
+
 .bs-header {
    font-size: 1.4em;
+   color: #dddddd;
+   text-shadow: 4px 4px #4183C4;
+   /* text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black; */
 }
 
 nav {
@@ -30,12 +42,13 @@ nav a {
    display: inline-block;
    padding: .5em;
    padding-left: 10px;
+   padding-right: 50px;
    color: white;
 }
 
 nav a:hover {
    color: #6EA4BF;
-   background-color: white;
+   background-color: rgba(255, 255, 255, .7)
 }
 
 .false {
@@ -44,4 +57,37 @@ nav a:hover {
 
 .true {
    background-color: green;
+}
+
+.main-feed {
+   margin-left: 10px;
+   margin-right: 10px;
+}
+
+.ui.item {
+   display: flex;
+   margin-top: 1em;
+   border: 1px solid #6EA4BF;
+   border-radius: 0.28571429rem;
+   box-shadow: 1.25px 1.5px #6EA4BF;
+}
+
+.ui.item:hover {
+   background-color: rgba(255, 255, 255, .25);
+}
+
+.content {
+   margin-top: auto;
+   margin-left: 1.5em;
+   margin-bottom: auto;
+}
+
+.ui.small.image {
+   max-width: 150px;
+}
+
+.main-feed h2 {
+   color: #4183C4;
+   font-size: 2em;
+   padding-top: .7em;
 }
