--- a/boldstatements_django/boldstatements/templates/boldstatements/base.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/base.html
@@ -16,10 +16,10 @@
 </head>
 <body>
    <header>
-      <h1 class="ui huge header"><span class="bs-header">B</span>old <span class="bs-header">S</span>tatements</h1>
+      <h1 class="ui huge header"><span class="header-row"><span class="bs-header">B</span>old</span> <span class="header-row"><span class="bs-header">S</span>tatements</span></h1>
       <nav>
          <a href="{% url 'statement_feed' %}">Statement Feed</a>
-         <a href="{% url 'make_a_statement' %}">New Statement</a>
+         <a href="{% url 'make_a_statement' %}">+New Statement</a>
          <a href="#">Statistics</a>
          <a href="#">Profile</a>
       </nav>
