--- a/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
@@ -1,12 +1,27 @@
 {% extends 'boldstatements/base.html' %}
 
 {% block content %}
-<h2>Statements <a href="{% url 'make_a_statement' %}">+</a></h2>
-<ul>
-    {% for statement in statements %}
-        <li>
-            <a href="{% url 'statement_detail' pk=statement.pk %}">{{ statement.prediction }}</a>
-        </li>
-    {% endfor %}
-</ul>
+<main class="main-feed">
+   <h2>Statements</h2>
+   <div class="ui items">
+      {% for statement in statements %}
+      <a href="{% url 'statement_detail' pk=statement.pk %}">
+         <div class="ui item">
+            <div class="ui small image">
+               <img src="{{ statement.image.url }}">
+            </div>
+            <div class="content">
+               <div class="header"><h3>"{{ statement.prediction }}"</h3></div>
+               <div class="meta">
+                  <h5>-{{ statement.predictor }}</h5>
+               </div>
+               <div class="description">
+                  <p>{{ statement.description }}</p>
+               </div>
+            </div>
+         </div>
+      </a>
+      {% endfor %}
+   </div>
+</main>
 {% endblock %}
