--- a/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
@@ -18,6 +18,7 @@
                <div class="description">
                   <p>{{ statement.description }}</p>
                </div>
+               <div class="prediction-date">stated {{ statement.datestamp }}</div>
             </div>
          </div>
       </a>
