--- a/boldstatements_django/boldstatements/templates/boldstatements/base.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/base.html
@@ -21,7 +21,7 @@
          {% if user.is_authenticated %}
          <a href="{% url 'logout_user' %}">Log Out</a>
          {% else %}
-         <a href="#">Sign Up</a>
+         <a href="{% url 'signup_user' %}">Sign Up</a>
          <a href="{% url 'login_user' %}">Log In</a>
          {% endif %}
       </div>
