function to sort is there. sort does not yet fully work

--- a/boldstatements_django/boldstatements/static/css/style.css
+++ b/boldstatements_django/boldstatements/static/css/style.css
@@ -156,3 +156,8 @@ nav a:hover {
    color: #6EA4BF !important;
    background-color: rgba(255, 255, 255, .7) !important;
 }
+
+#true-radio, #false-radio {
+   background-color: transparent;
+   fill: red;
+}
