--- a/boldstatements_django/boldstatements/templates/boldstatements/signup.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/signup.html
@@ -3,8 +3,11 @@
 {% block content %}
 <h2>Sign Up</h2>
 <form method='post' class="sign-up">
-      {% csrf_token %}
-      {{ form.as_p }}
-      <button type='submit'>Sign Up</button>
+   {% csrf_token %}
+   {{ form.as_p }}
+   <button type='submit'>Sign Up</button>
 </form>
+<br>
+<p><strong>-- OR --</strong></p>
+<a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a><br>
 {% endblock %}
