--- a/boldstatements_django/boldstatements/static/css/style.css
+++ b/boldstatements_django/boldstatements/static/css/style.css
@@ -1,8 +1,6 @@
 body {
    box-sizing: border-box;
    background-color: #BDD5E1;
-   /* margin-right: 1em;
-   margin-left: 1em; */
 }
 
 header {
@@ -164,4 +162,19 @@ nav a:hover {
 
 .selected {
    font-weight: bold;
+}
+
+footer {
+   padding: 30px 10px 30px 10px;
+   margin-top: 50px;
+   background-color: #6EA4BF;
+   color: white;
+   text-transform: uppercase;
+   font-family: "Lato", sans-serif;
+}
+
+.footer-bs {
+   font-size: 1.4em;
+   color: #dddddd;
+   text-shadow: 2px 2px #4183C4;
 }
