--- a/boldstatements_django/boldstatements/templates/boldstatements/base.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/base.html
@@ -16,7 +16,7 @@
 </head>
 <body>
    <header>
-      <h1 class="ui huge header"><span class="header-row"><span class="bs-header">B</span>old</span> <span class="header-row"><span class="bs-header">S</span>tatements</span></h1>
+      <a href="{% url 'statement_feed' %}"><h1 class="ui huge header"><span class="header-row"><span class="bs-header">B</span>old</span> <span class="header-row"><span class="bs-header">S</span>tatements</span></h1></a>
       <div class="auth-links">
          {% if user.is_authenticated %}
          <a href="{% url 'logout_user' %}">Log Out</a>
@@ -34,5 +34,8 @@
    </header>
    {% block content %}
    {% endblock %}
+   <footer>
+      <p><a href="{% url 'statement_feed' %}"><span class="footer-bs">BS</span></a> &nbsp; &copy;2018 by Aaron Horowitz</p>
+   </footer>
 </body>
 </html>
