--- a/boldstatements_django/boldstatements/templates/boldstatements/signup.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/signup.html
@@ -9,5 +9,5 @@
 </form>
 <br>
 <p><strong>-- OR --</strong></p>
-<a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a><br>
+<a href="{% url 'social:begin' 'google-oauth2' %}">Sign up with Google</a><br>
 {% endblock %}
