--- a/boldstatements_django/boldstatements/templates/registration/login.html
+++ b/boldstatements_django/boldstatements/templates/registration/login.html
@@ -10,8 +10,10 @@
    </form>
    <br>
    <p><strong>-- OR --</strong></p>
-   <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a><br>
+   <a href="{% url 'social:begin' 'google-oauth2' %}">Log in with Google</a>
+   <br>
+   <br>
    <p><strong>-- OR --</strong></p>
-  <a href="{% url 'social:begin' 'github' %}">Login with GitHub</a><br>
+  <a href="{% url 'social:begin' 'github' %}">Log in with GitHub</a><br>
 </div>
 {% endblock %}
