found a sort solution, sort of. added fa icons to google and github auth

--- a/boldstatements_django/boldstatements/static/css/style.css
+++ b/boldstatements_django/boldstatements/static/css/style.css
@@ -43,11 +43,13 @@ nav a {
    padding-left: 10px;
    padding-right: 50px;
    color: white;
+   /* border-radius: 2px; */
+   transition: all .15s ease-in-out;
 }
 
 nav a:hover {
    color: #6EA4BF;
-   background-color: rgba(255, 255, 255, .7);
+   background-color: white;
 }
 
 .false {
@@ -148,11 +150,44 @@ nav a:hover {
    padding: .5em !important;
    padding-left: 10px !important;
    padding-right: 10px !important;
+   transition: all .15s ease-in-out;
 }
 
 .auth-links a:hover {
    color: #6EA4BF !important;
-   background-color: rgba(255, 255, 255, .7) !important;
+   background-color: white !important;
+}
+
+.logbutts {
+   color: white !important;
+   background-color: #6EA4BF !important;
+   border-radius: 0 !important;
+   font-size: 1.1em !important;
+   font-weight: normal !important;
+   transition: all .15s ease-in-out !important;
+   cursor: pointer;
+   display: inline-block;
+   min-height: 1em;
+   outline: none;
+   border: none;
+   vertical-align: baseline;
+   font-family: 'Lato', 'Helvetica Neue', Arial, Helvetica, sans-serif;
+   margin: 0em 0.25em 0em 0em;
+   padding: 0.78571429em 1.5em 0.78571429em;
+   line-height: 1.2em;
+}
+
+.sign-up {
+   max-width: 500px;
+}
+
+.sign-up ul, .helptext {
+   display: none;
+}
+
+.logbutts:hover {
+   color: #6EA4BF !important;
+   background-color: white !important;
 }
 
 #true-radio, #false-radio {
@@ -177,4 +212,8 @@ footer {
    font-size: 1.4em;
    color: #dddddd;
    text-shadow: 2px 2px #4183C4;
+}
+
+.hidden {
+   display: none;
 }
