--- a/boldstatements_django/boldstatements/templates/boldstatements/base.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/base.html
@@ -8,7 +8,7 @@
    <link rel="stylesheet" href="/css/master.css">
    <link rel="stylesheet" href="{% static 'css/style.css' %}">
    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css" integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous">
-   <link rel="icon" type="image/png" href="/static/images/shout-head.png">
+   <link rel="icon" type="image/png" href="static/images/shout-head.png">
    <script
    src="https://code.jquery.com/jquery-3.1.1.min.js"
    integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -37,7 +37,7 @@
    {% block content %}
    {% endblock %}
    <footer>
-      <p><a href="{% url 'statement_feed' %}"><span class="footer-bs">BS</span></a> &nbsp; &copy;2018 by Aaron Horowitz</p>
+      <p><a href="{% url 'statement_feed' %}"><span class="footer-bs">BS</span></a> &nbsp; &copy;2018 Aaron Horowitz</p>
    </footer>
 </body>
 </html>
