--- a/boldstatements_django/boldstatements/templates/registration/login.html
+++ b/boldstatements_django/boldstatements/templates/registration/login.html
@@ -9,7 +9,7 @@
       <button type="submit" class="ui button logbutts">Login</button>
    </form>
    <br>
-   <a href="{% url 'social:begin' 'google-oauth2' %}"><button class="ui button logbutts"><span>Login with &nbsp;<i class="fab fa-google"></i></span></button></a>
+   <a href="{% url 'social:begin' 'google-oauth2' %}"><button class="ui button logbutts"><span>Login with &nbsp;<i class="fab fa-google"></i></span></button></a> &nbsp;
    <a href="{% url 'social:begin' 'github' %}"><button class="ui button logbutts"><span>Login with &nbsp;<i class="fab fa-github"></i></span></button></a>
 </div>
 {% endblock %}
