tweaked styling a bit

--- a/boldstatements_django/boldstatements/templates/boldstatements/new_statement.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/new_statement.html
@@ -6,7 +6,7 @@
    <form enctype="multipart/form-data" method="post" class="ui form">
       {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit" class="ui button">Submit</button>
+      <button type="submit" class="ui button logbutts">Submit</button>
    </form>
 </div>
 {% endblock %}
