--- a/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
+++ b/boldstatements_django/boldstatements/templates/boldstatements/statement_feed.html
@@ -10,7 +10,7 @@
          <div class="ui small image">
             <img src="{{ statement.image.url }}">
          </div>
-         <div class="content">
+         <div class="content feed-stuffs">
             <a href="{% url 'statement_detail' pk=statement.pk %}" class="in-sort-order">
                <div class="header"><h3>"{{ statement.prediction }}"</h3></div>
                <div class="meta">
@@ -37,7 +37,7 @@
          <div class="ui small image">
             <img src="{{ statement.image.url }}">
          </div>
-         <div class="content">
+         <div class="content feed-stuffs">
             <a href="{% url 'statement_detail' pk=statement.pk %}" class="in-sort-order">
                <div class="header"><h3>"{{ statement.prediction }}"</h3></div>
                <div class="meta">
