--- a/boldstatements_django/boldstatements/static/css/style.css
+++ b/boldstatements_django/boldstatements/static/css/style.css
@@ -79,8 +79,12 @@ nav a:hover {
 
 .content {
    margin-top: auto;
-   margin-left: 1.5em;
    margin-bottom: auto;
+}
+
+.feed-stuffs {
+   margin-left: 1.5em !important;
+   margin-right: 1.5em !important;
 }
 
 .ui.small.image {
